force-app/main/default/objects/qual_Integration_Log__c/qual_Integration_Log__c.object-meta.xml
<CustomObject>
    <description>Stores integration logs for Qualtrics API callouts</description>
    <label>Qualtrics Integration Log</label>
    <nameField>
        <displayFormat>QLOG-{000000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Qualtrics Integration Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>