force-app/main/default/objects/qual_Integration_Log__c/fields/qual_Call_Id__c.field-meta.xml
<CustomField>
    <fullName>qual_Call_Id__c</fullName>
    <description>UJET/CCaS call identifier for Call payload log records.</description>
    <label>Call ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>