force-app/main/default/objects/qual_Integration_Log__c/fields/qual_Case__c.field-meta.xml
<CustomField>
    <fullName>qual_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Salesforce Case</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Qualtrics Integration Logs</relationshipLabel>
    <relationshipName>qual_Integration_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>