force-app/main/default/objects/qual_Integration_Log__c/fields/qual_Datacenter__c.field-meta.xml
<CustomField>
    <fullName>qual_Datacenter__c</fullName>
    <description>Datacenter used for this callout</description>
    <label>Datacenter</label>
    <length>10</length>
    <type>Text</type>
</CustomField>