force-app/main/default/objects/qual_Integration_Log__c/fields/qual_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>qual_Error_Message__c</fullName>
    <description>Exception message or error details</description>
    <label>Error Message</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>