force-app/main/default/objects/qual_Integration_Log__c/fields/qual_Event_Type__c.field-meta.xml
<CustomField>
    <fullName>qual_Event_Type__c</fullName>
    <description>The case lifecycle event that triggered this integration log entry: Opened, Updated, or Closed.</description>
    <label>Event Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>