force-app/main/default/objects/qual_Integration_Log__c/fields/qual_Integration_Name__c.field-meta.xml
<CustomField>
    <fullName>qual_Integration_Name__c</fullName>
    <defaultValue>&quot;Qualtrics Case Survey&quot;</defaultValue>
    <description>Name of the integration</description>
    <label>Integration Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>