force-app/main/default/objects/qual_Integration_Log__c/fields/qual_Next_Retry_Date__c.field-meta.xml
<CustomField>
    <fullName>qual_Next_Retry_Date__c</fullName>
    <description>Scheduled next retry time</description>
    <label>Next Retry Date</label>
    <type>DateTime</type>
</CustomField>