force-app/main/default/objects/qual_Integration_Log__c/fields/qual_Payload_Size_Bytes__c.field-meta.xml
<CustomField>
    <fullName>qual_Payload_Size_Bytes__c</fullName>
    <description>Request payload size for monitoring</description>
    <label>Payload Size (Bytes)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>