force-app/main/default/objects/qual_Integration_Log__c/fields/qual_Payload_Type__c.field-meta.xml
<CustomField>
    <fullName>qual_Payload_Type__c</fullName>
    <description>Outbound payload family: Case or Call.</description>
    <label>Payload Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>