force-app/main/default/objects/qual_Integration_Log__c/fields/qual_Processed_Date__c.field-meta.xml
<CustomField>
    <fullName>qual_Processed_Date__c</fullName>
    <description>Timestamp of last processing attempt</description>
    <label>Processed Date</label>
    <type>DateTime</type>
</CustomField>