force-app/main/default/objects/qual_Integration_Log__c/fields/qual_Qualtrics_Event_Id__c.field-meta.xml
<CustomField>
    <fullName>qual_Qualtrics_Event_Id__c</fullName>
    <description>Unique event ID returned by Qualtrics for reconciliation and QA</description>
    <externalId>true</externalId>
    <label>Qualtrics Event Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>