force-app/main/default/objects/qual_Integration_Log__c/fields/qual_Request_Body__c.field-meta.xml
<CustomField>
    <fullName>qual_Request_Body__c</fullName>
    <description>Full JSON payload sent to Qualtrics</description>
    <label>Request Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>