force-app/main/default/objects/qual_Integration_Log__c/fields/qual_Response_Body__c.field-meta.xml
<CustomField>
    <fullName>qual_Response_Body__c</fullName>
    <description>Full response JSON from Qualtrics</description>
    <label>Response Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>