force-app/main/default/objects/qual_Integration_Log__c/fields/qual_Retry_Count__c.field-meta.xml
<CustomField>
    <fullName>qual_Retry_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Current retry attempt number</description>
    <label>Retry Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>