force-app/main/default/objects/qual_Integration_Log__c/fields/qual_Stack_Trace__c.field-meta.xml
<CustomField>
    <fullName>qual_Stack_Trace__c</fullName>
    <description>Apex stack trace for errors</description>
    <label>Stack Trace</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>