force-app/main/default/objects/qual_Integration_Log__c/fields/qual_Status_Code__c.field-meta.xml
<CustomField>
    <fullName>qual_Status_Code__c</fullName>
    <description>HTTP response code</description>
    <label>Status Code</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>