force-app/main/default/objects/qual_Integration_Log__c/fields/qual_Ujet_Session_Id__c.field-meta.xml
<CustomField>
    <fullName>qual_Ujet_Session_Id__c</fullName>
    <description>Salesforce Id of the UJET Session that produced a Call payload.</description>
    <label>UJET Session ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>