force-app/main/default/objects/qual_Integration_Log__c/fields/qual_Workflow_Execution_Id__c.field-meta.xml
<CustomField>
    <fullName>qual_Workflow_Execution_Id__c</fullName>
    <description>Qualtrics workflow execution reference</description>
    <externalId>true</externalId>
    <label>Workflow Execution Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>