force-app/main/default/objects/qual_Integration_Log__c/fields/qual_Workflow_Id__c.field-meta.xml
<CustomField>
    <fullName>qual_Workflow_Id__c</fullName>
    <description>Workflow ID used for this callout</description>
    <label>Workflow Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>