force-app/main/default/objects/qual_Integration_Log__c/listViews/All_Logs.listView-meta.xml
<ListView>
    <fullName>All_Logs</fullName>
    <columns>NAME</columns>
    <columns>qual_Status__c</columns>
    <columns>qual_Event_Type__c</columns>
    <columns>qual_Status_Code__c</columns>
    <columns>qual_Processed_Date__c</columns>
    <columns>qual_Case__c</columns>
    <columns>qual_Retry_Count__c</columns>
    <columns>qual_Next_Retry_Date__c</columns>
    <columns>qual_Workflow_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Logs</label>
</ListView>