force-app/main/default/objects/qual_Integration_Log__c/listViews/Dead_Letter.listView-meta.xml
<ListView>
    <fullName>Dead_Letter</fullName>
    <columns>NAME</columns>
    <columns>qual_Status__c</columns>
    <columns>qual_Event_Type__c</columns>
    <columns>qual_Status_Code__c</columns>
    <columns>qual_Processed_Date__c</columns>
    <columns>qual_Case__c</columns>
    <columns>qual_Error_Message__c</columns>
    <columns>qual_Retry_Count__c</columns>
    <columns>qual_Workflow_Id__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>qual_Status__c</field>
        <operation>equals</operation>
        <value>Dead Letter</value>
    </filters>
    <label>Dead Letter</label>
</ListView>