force-app/main/default/objects/qual_Integration_Log__c/listViews/Failed_Last_7_Days.listView-meta.xml
<ListView>
    <fullName>Failed_Last_7_Days</fullName>
    <columns>NAME</columns>
    <columns>qual_Status__c</columns>
    <columns>qual_Event_Type__c</columns>
    <columns>qual_Status_Code__c</columns>
    <columns>qual_Processed_Date__c</columns>
    <columns>qual_Case__c</columns>
    <columns>qual_Error_Message__c</columns>
    <columns>qual_Retry_Count__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>qual_Status__c</field>
        <operation>equals</operation>
        <value>Failed</value>
    </filters>
    <filters>
        <field>qual_Processed_Date__c</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:7</value>
    </filters>
    <label>Failed (Last 7 Days)</label>
</ListView>