force-app/main/default/objects/qual_Integration_Log__c/listViews/Needs_Attention.listView-meta.xml
<ListView>
    <fullName>Needs_Attention</fullName>
    <booleanFilter>1 OR 2 OR 3</booleanFilter>
    <columns>NAME</columns>
    <columns>qual_Status__c</columns>
    <columns>qual_Event_Type__c</columns>
    <columns>qual_Status_Code__c</columns>
    <columns>qual_Processed_Date__c</columns>
    <columns>qual_Case__c</columns>
    <columns>qual_Error_Message__c</columns>
    <columns>qual_Retry_Count__c</columns>
    <columns>qual_Next_Retry_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>qual_Status__c</field>
        <operation>equals</operation>
        <value>Failed</value>
    </filters>
    <filters>
        <field>qual_Status__c</field>
        <operation>equals</operation>
        <value>Dead Letter</value>
    </filters>
    <filters>
        <field>qual_Status__c</field>
        <operation>equals</operation>
        <value>Retrying</value>
    </filters>
    <label>Needs Attention</label>
</ListView>