force-app/main/default/objects/qual_Integration_Log__c/listViews/New.listView-meta.xml
<ListView>
    <fullName>New</fullName>
    <columns>NAME</columns>
    <columns>qual_Status__c</columns>
    <columns>qual_Event_Type__c</columns>
    <columns>qual_Status_Code__c</columns>
    <columns>qual_Processed_Date__c</columns>
    <columns>qual_Case__c</columns>
    <columns>qual_Workflow_Id__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>qual_Status__c</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <label>New</label>
</ListView>