force-app/main/default/objects/qual_Integration_Log__c/listViews/Retrying_Due.listView-meta.xml
<ListView>
    <fullName>Retrying_Due</fullName>
    <columns>NAME</columns>
    <columns>qual_Status__c</columns>
    <columns>qual_Event_Type__c</columns>
    <columns>qual_Retry_Count__c</columns>
    <columns>qual_Next_Retry_Date__c</columns>
    <columns>qual_Case__c</columns>
    <columns>qual_Error_Message__c</columns>
    <columns>qual_Workflow_Id__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>qual_Status__c</field>
        <operation>equals</operation>
        <value>Retrying</value>
    </filters>
    <filters>
        <field>qual_Next_Retry_Date__c</field>
        <operation>lessOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <label>Retrying Due</label>
</ListView>