force-app/main/default/objects/qual_Integration_Log__c/listViews/Success_Last_7_Days.listView-meta.xml
<ListView>
    <fullName>Success_Last_7_Days</fullName>
    <columns>NAME</columns>
    <columns>qual_Status__c</columns>
    <columns>qual_Event_Type__c</columns>
    <columns>qual_Status_Code__c</columns>
    <columns>qual_Processed_Date__c</columns>
    <columns>qual_Case__c</columns>
    <columns>qual_Workflow_Id__c</columns>
    <columns>qual_Workflow_Execution_Id__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>qual_Status__c</field>
        <operation>equals</operation>
        <value>Success</value>
    </filters>
    <filters>
        <field>qual_Processed_Date__c</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:7</value>
    </filters>
    <label>Success (Last 7 Days)</label>
</ListView>